crates/runtime-object-store/src/store/snapshots/runtime_object_store__store__common__tests__build_object_meta.snap
---
source: crates/runtime-object-store/src/store/common.rs
expression: meta
---
ObjectMeta {
    location: Path {
        raw: "test/file.parquet",
    },
    last_modified: 2023-11-14T22:13:20Z,
    size: 4096,
    e_tag: None,
    version: None,
}
